skin/frontend/wsu_base/connections.store.wsu.edu/css/custom.css
/* CSS Document */
body{
	font-family: "pragmatica-web-condensed", Arial, Helvetica, sans-serif;
	font-style:normal;
	font-size:100%;
	line-height:1.6;

	background:none !important;
  background-image   : url(/media/store-media/connections.store.wsu.edu/skin/background-strip.png),
                       url(/media/store-media/connections.store.wsu.edu/skin/background.jpg) !important;

  background-repeat  : no-repeat,
                       repeat-x !important;

  background-position: 100% top,
                       center top !important;
}
main{
	background-color:#fff;
	position: relative;
}
.home main{
	background: url(/media/store-media/connections.store.wsu.edu/skin/home-main-background.jpg);
	background-color:#fff;
	background-repeat: no-repeat;
	background-position:center bottom;
    background-size: 100% auto;
	
}
section#siteID{
	/*background:none !important;*/
	background-image : url(/media/store-media/connections.store.wsu.edu/skin/header-bk.jpg);
	background-color:#38424a;
	background-repeat: no-repeat;
	background-position:left top;
    background-size: 100% auto;
	box-sizing:border-box;
	border:2px solid #da1a33;
	border-top:none;
    z-index: 100;
}
#spine #glue:before{
	background:transparent url(/media/store-media/connections.store.wsu.edu/skin/spine_background.png) repeat center top !important;
}
.quick-access{
	background:none;
    position: absolute;
    width: 100%;
	z-index:100;
}
.quick-access .links{
	padding:0px;
}
.quick-access .links,
.quick-access .links li{
	display:inline-block;
}
.quick-access .links
li{
	padding:0 0px 0 1px;
	padding-left:10px;
}

/*%--global--%*/
.quick-access{
	background:none;
    position: absolute;
    width: 100%;
    right: -4px;
    top: 87px;
	z-index:100;
}

.quick-access .links a{
	color:#ddd;
	background:none;
    position: relative;
	height:32px;
	color:#FFFFFF;
	display:inline-block;
	content:"";
}
.quick-access .links a span{
	width:100%;
	height:100%;
	position: relative;
	top: calc( 50% - 8px );
    left: 0;
    z-index: 1;
	height:32px;
    text-align: center;
    font-size: 15px;
	padding:0px 5px;
}
.quick-access .links a:before{
    transform: skew(20deg);
    -webkit-transform: skew(20deg);
    -moz-transform: skew(20deg);
    -ms-transform: skew(20deg);
    -o-transform: skew(20deg);
    background-color: #da1a33;
	
	border:2px solid #da1a33;
	position:absolute;
    top: 0px;
    left: 0px;
    z-index: 0;
    width: 100%;
    height: 32px;
	content:"";
}
.quick-access .links a:hover:before{
    background-color:#39424b;
}

.quick-access .links a{
	padding:0 7px 0 0;
	/*background:url(http://store.wsu.dev/skin/frontend/wsu_base/default/images/bkg_pipe1.gif) no-repeat 100% 50%*/
}
.quick-access .links li.last a{padding:0;background:none}
.quick-access .links a span:before{
	display: inline-block;
	font: normal normal normal 14px/1 FontAwesome;
	font-size: 20px;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	transform: translate(0, 0);	
	
	color:#39424b;
	z-index:1;
}

/*%--home--%*/
.home .quick-access{
	background:none;
    position: absolute;
    width: 100%;
    right: 31px;
    top: 54px;
	z-index:100;
}
.home .quick-access .links a{
	color:#ddd;
	background:none;
    position: relative;
	width:82px;
	height:83px;
	color:#FFFFFF;
	display:inline-block;
	content:"";
}
.home .quick-access .links a span{
	width:100%;
	height:100%;
	position:absolute;
    top: calc( 50% - 15px - 21px );
    left: -8px;
    z-index: 1;
    width: 82px;
    text-align: center;
    font-size: 15px;
	padding:0px;
}
.home .quick-access .links a:before{
    transform: skew(20deg);
    -webkit-transform: skew(20deg);
    -moz-transform: skew(20deg);
    -ms-transform: skew(20deg);
    -o-transform: skew(20deg);
    background-color: #da1a33;
	
	border:2px solid #da1a33;
	position:absolute;
    top: 0px;
    left: 0px;
    z-index: 0;
    width: 82px;
    height: 75px;
	content:"";
}
.home .quick-access .links a:hover:before{
    background-color:#39424b;
}

.home .quick-access .links a{
	padding:0 7px 0 0;
	/*background:url(http://store.wsu.dev/skin/frontend/wsu_base/default/images/bkg_pipe1.gif) no-repeat 100% 50%*/
}
.home .quick-access .links li.last a{padding:0;background:none}
.home .quick-access .links a span:before{
	display: inline-block;
	font: normal normal normal 14px/1 FontAwesome;
	font-size: inherit;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	transform: translate(0, 0);	
	
	color:#39424b;
	position: absolute;
    right: 2px;
    top: 23px;
    font-size: 50px;
	z-index:1;
}

/*%--icons--%*/
.quick-access .links a:hover span:before{
	color:#fff;
}
.quick-access .links a[href*="customer/account/create"] span:before{
	content: "\f090";
}
.quick-access .links a[href*="customer/account/login"] span:before{
	content: "\f090";
}
.quick-access .links a[href*="checkout"] span:before{
	content: "\f046";
}
.quick-access .links a[href*="checkout/cart"] span:before{
	content: "\f07a";
}
.quick-access .links a[href*="wishlist"] span:before{
	content: "\f005";
}


/*%%%-FOOTER-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
main footer{
	padding:0px !important;
	position:absolute;
	bottom:0px;
	width:100%;
	height:36px;
	background:#d5151f;
	
}
#site-global-footer{
	background: url(/media/store-media/connections.store.wsu.edu/skin/footer-bk.jpg);
}
#site-global-footer ul{
	padding: 0;
  margin: 0;
  list-style: none;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-flow: row wrap;
  justify-content: space-around;
}
#site-global-footer ul li{
  width: 20%;
  height: 36px;
  color: white;
  font-weight: bold;
  font-size: 15px;
  text-align: center;
}
#site-global-footer ul li a{
	color:#fff;
    width: 100%;
    display: inline-block;
    height: 36px;
    line-height: 36px;
}
/* ... */

